# brain-template

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude/: CODEBASE.md
.claude/skills/brain-project-note/: SKILL.md
.claude/skills/brain-setup/: SKILL.md
.claude/skills/brain-setup/global/: CLAUDE.brain-vault.md  brain_memory_sync.py  settings.hooks.json
.claude/skills/dream-pass/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
.obsidian/: graph.json
knowledge/index/: Home.md
knowledge/index/templates/: meeting.md  memory-fact.md  organisation.md  person.md
mcp/: DEPLOY.md  README.md
mcp_server/: __init__.py  __main__.py  app.py  audit.py  auth.py  config.py  entity_tools.py  git_ops.py  identity.py  manual_test.py  memory_tools.py  provenance.py  push_queue.py  reindex.py  run-local.sh  runtime.py  safety.py  test_replace_note.py  test_search_gate.py  tools.py
mcp_server/launchd/: com.brain.dream.plist  com.brain.maintenance.plist
mcp_server/systemd/: brain-maintenance.service  brain-maintenance.timer  brain-mcp.service
scripts/: README.md  ask.py  consolidate.py  dream.sh  dream_gate.py  eval_retrieval.py  ingest.py  maintain.sh  pull.py  pull_from_upstream.sh  push_to_upstream.sh  sweep.py  sync_template.sh
scripts/eval/: retrieval_golden.jsonl
scripts/ingest_lib/: __init__.py  caption.py  chat.py  concepts.py  config.py  connections.py  consolidate.py  dashboards.py  describe.py  dream.py  evalmine.py  evalret.py  knowledge.py  lexical.py  logging_setup.py  metadata.py  notes.py  pipeline.py  recency.py  relations.py  semantic.py  status.py  summarize.py  sweep.py
scripts/ingest_lib/connectors/: __init__.py  base.py  granola.py  justrec.py  runner.py  state.py
scripts/ingest_lib/extractors/: __init__.py  audio.py  base.py  dataset.py  docx.py  image.py  meeting.py  notebook.py  pdf.py  pptx.py  text.py  vlm.py
tests/: conftest.py  test_caption.py  test_chat.py  test_chunking.py  test_concepts_unchanged.py  test_config.py  test_connections.py  test_connections_integration.py  test_connectors.py  test_consolidate.py  test_dashboards.py  test_describe.py  test_dream.py  test_evalmine.py  test_evalret.py  test_extractors.py  test_frontmatter_serialization.py  test_knowledge_archive_exclusion.py  test_knowledge_integration.py  test_knowledge_records.py  test_lexical.py  test_mcp_audit.py  test_mcp_chunk_context.py  test_mcp_entity_tools.py  test_mcp_identity.py  test_mcp_memory_tools.py  test_mcp_provenance.py  test_mcp_security.py  test_mcp_write_policy.py  test_meeting.py  test_pipeline.py  test_push_queue.py  test_recency.py  test_reindex.py  test_related.py  test_relations.py  test_semantic_upsert.py  test_status.py  test_summarize.py  test_sweep.py  (+1 more)
