[project]
name = "brain"
version = "0.1.0"
description = "Personal model-agnostic second brain: ingestion + tooling."
requires-python = ">=3.12,<3.13"
readme = "README.md"

# Core dependencies that the ingestion CLI needs to *function* with the
# pypdf fallback path. Install with `uv sync`.
dependencies = [
    "pypdf>=5.0",
    "python-docx>=1.1",
    "python-pptx>=1.0",
    "nbformat>=5.10",
    "pyyaml>=6.0",
    "rich>=13.7",            # nicer dry-run / progress output
    "platformdirs>=4.2",
    "anthropic>=0.40",       # default LLM provider for the summarizer
    "openai>=1.50",          # OpenAI provider + local OpenAI-compatible servers
    "google-genai>=0.4",     # Gemini provider
    "python-dotenv>=1.0",    # auto-load .env at the repo root
    "sentence-transformers>=3.0",  # local embeddings for --search
    "numpy>=1.26",           # vector store (already a transitive of torch)
    # Pin transformers to the version MinerU 2.7.6 needs. Without this,
    # `uv sync` / `uv run` resolves transformers 5.x (via sentence-
    # transformers, which only caps <6.0), and MinerU's UniMerNet then
    # fails to import `find_pruneable_heads_and_indices` (removed in TF
    # 4.57) so every PDF silently falls back to pypdf as `partial`.
    # sentence-transformers 5.x tolerates 4.53.3, so this is conflict-free.
    "transformers>=4.53.3,<4.54",
    # MCP server (mcp_server/). All three are stable, no pre-release
    # caveats — unlike MinerU. Cheap to install (~10 MB total) and
    # required for `python -m mcp_server` plus its smoke test.
    "mcp>=1.27",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

# MinerU (the full PDF extraction stack — PaddleOCR PP-Structure +
# PaddleOCR + UniMerNet) is **deliberately not in the lockfile**. Some
# of its transitive deps are pre-releases that break uv's lockfile
# resolution, and the model weights are ~14 GB which most CI
# environments don't want.
#
# Install it separately into the same .venv when you want full
# extraction (pin 2.7.6 — unpinned resolves to the broken mineru 3.4.0;
# see scripts/README.md and CLAUDE.md):
#
#     uv pip install --prerelease=allow "mineru[pipeline]==2.7.6" six
#
# Note the ``[pipeline]`` extra — without it, torch isn't pulled in and
# the CLI fails fast with ``ModuleNotFoundError: No module named 'torch'``.
# ``uv sync`` will prune mineru on every run because it isn't in the
# lockfile, so repeat the command above after each sync. (transformers is
# now pinned in [project] dependencies above, so you no longer have to
# re-pin it after every sync — only mineru + six.)
#
# Models auto-download from Hugging Face on first use; no config file
# required. When MinerU isn't installed, the ingestion script falls
# back to pypdf for text-only extraction and marks notes
# `status: partial`.

[tool.uv]
managed = true

[tool.pytest.ini_options]
# Collect only from tests/. Without this, pytest walks the whole vault tree
# (inbox/, archive/, the 22k tracked source files) — importing and executing
# any test-shaped file that lands there, and paying a full-tree scan every run.
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.11",
    "pytest>=9.0.3",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
# This project is not meant to be packaged; declare a synthetic
# package list so hatch doesn't fail.
packages = ["scripts/ingest_lib"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# Pragmatic set for a personal-vault framework: errors, pyflakes, warnings,
# pyupgrade, and bugbear. Not isort (would reorder many imports for no
# behaviour gain) and not the whole zoo. Add rules deliberately, not en masse.
select = ["E", "F", "W", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# The scripts/ sys.path shim (insert before importing ingest_lib) is a
# deliberate, load-bearing pattern; E402 (import-not-at-top) is expected there.
"mcp_server/entity_tools.py" = ["E402"]
"mcp_server/memory_tools.py" = ["E402"]
"mcp_server/provenance.py" = ["E402"]
"mcp_server/reindex.py" = ["E402"]
"mcp_server/tools.py" = ["E402"]
"scripts/ingest_lib/semantic.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
# Third-party ML/LLM SDKs (torch, sentence_transformers, mineru, anthropic,
# openai, google.genai, python-docx/pptx, nbformat, pypdf, pypdfium2) ship no
# usable stubs; ignore their import types rather than drown in stub-gap noise.
# We still typecheck OUR code's own annotations.
ignore_missing_imports = true
check_untyped_defs = true
# The scripts/ package is imported via a sys.path shim, not installed; point
# mypy at it so cross-module imports resolve.
mypy_path = "scripts"
explicit_package_bases = true
